--- a/README.adoc
+++ b/README.adoc
@@ -10,23 +10,13 @@
 :url-docs-run: {url-antora-docs}/run-antora/
 
 This is the playbook project for the Transpower OpenSCD docs site.
-You can view the site produced by the Antora playbook ([.path]_antora-playbook.yml_) stored in this project at https://danyill.github.io/tpnz-openscd-docs/docs-site.
+You can view the site produced by the Antora playbook ([.path]_antora-playbook.yml_) stored in this project at https://danyill.github.io/tpnz-openscd-docs/.
 
-You can also use this project and the demo documentation components to generate the demo site on your own computer
-To use the demo materials and generate the demo site locally, follow the steps in the {url-docs-quickstart}[Antora quickstart].
+Follow the steps in the {url-docs-quickstart}[Antora quickstart].
 
-== Antora Playbook
+To generate this documentation:
 
-An {url-docs-playbook}[Antora playbook] is responsible for generating a documentation site.
-It contains the instructions a user wants to relay to the Antora site generator.
-These instructions include the content Antora should collect and the UI it should apply to the generated site.
-
-The file [.path]_antora-playbook.yml_ in this repository is the playbook used to produce the demo site.
-It tells Antora where to find the remote content repositories and default UI.
-
-== Generate the Demo Site
-
-After cloning this playbook project repository to your computer or setting up your own playbook for the demo site (see the {url-docs-quickstart}[Antora quickstart] for instructions) you can generate the demo site by {url-docs-run}[running Antora].
+  $ npx antora antora-playbook.yml
 
 == Copyright and License
 
