--- a/docs/modules/ROOT/pages/introduction.adoc
+++ b/docs/modules/ROOT/pages/introduction.adoc
@@ -1,6 +1,7 @@
 = Introduction
  
-This is an open repository of information on OpenSCD and IEC 61850-6. You are welcome to share your knowledge with the rest of the world at https://github.com/openscd/open-scd/wiki/Home/_edit 😄 . Welcome aboard!
+This is an open repository of information on OpenSCD and IEC 61850-6. You are welcome to share your knowledge with the rest of the world, by clicking the Edit link in the top right corner 😄. 
+Welcome aboard!
 
 You can find information related to topics like
 
